@@ -79,9 +79,12 @@ FingerPrintResults::FingerPrintResults() {
   distance_calculation_method = DIST_METHOD_NONE;
   maxTimingRatio = 0;
   incomplete = false;
+  this->cp = NULL;
 }
 
 FingerPrintResults::~FingerPrintResults() {
+  if (this->cp != NULL)
+    delete this->cp;
 }
 
 FingerPrintResultsIPv4::FingerPrintResultsIPv4() {
@@ -100,6 +103,22 @@ FingerPrintResultsIPv4::~FingerPrintResultsIPv4() {
   }
   numFPs = 0;
   free(FPs);
+}
+
+// Max length string generated by printf("%X", u32)
+#define VLEN_MAX (8 + 1)
+const char *FingerPrintResults::cp_hex(u32 val) {
+  if (this->cp == NULL)
+    this->cp = new CharPool();
+  char v[VLEN_MAX] = {0};
+  int vlen = Snprintf(v, VLEN_MAX, "%X", val);
+  assert(vlen > 0 && vlen < VLEN_MAX);
+  return this->cp->dup(v, vlen);
+}
+const char *FingerPrintResults::cp_dup(const char *src, int len) {
+  if (this->cp == NULL)
+    this->cp = new CharPool();
+  return this->cp->dup(src, len);
 }
 
 FingerPrintResultsIPv6::FingerPrintResultsIPv6() {
